# puzzle-plugin-system

./: .gitignore  .travis.yml  MANIFEST.in  README.md  plugin_loader.py  plugin_loader_test.py  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml  tests.yml
schwarz/plugin_puzzle/: __init__.py  plugin_loader.py  signal_registry.py
schwarz/puzzle_plugins/: plugin_loader.py  signal_registry.py
tests/: plugin_loader_test.py  signal_registry_test.py
