[metadata]
name        = PuzzlePluginSystem
description = generic plugin system based on setuptools and blinker
version     = file: VERSION.txt
author      = Felix Schwarz
author_email = felix.schwarz@oss.schwarz.eu
license     = CC0

[options]
packages = find:
namespace_packages = schwarz
zip_safe = false
include_package_data = true


[bdist_wheel]
universal = 1

